--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 
     <link rel="shortcut icon" href="assets/rocket.svg"/>
     <link rel="stylesheet" href="style.css"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QD1Q83YPTY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-QD1Q83YPTY');
+    </script>
+
 </head>
 
 <body>
