Feature (Resume Button) : Added button to download resume

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                 <a href="https://t.me/ayush3298/"
                    target="_blank" class="icon-link"><i class="fab fa-telegram-plane"></i> </a>
             </div>
+            <div style="margin-top: 1.5rem" class="hero-headline">
+                <button class="btn" href="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/resume/Ayush Bairagi Python.pdf">Download Resume</button>
+            </div>
             <a class="arrow fa fa-arrow-down fa-3x" href="#about"></a>
         </div>
     </div>
