--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
                 <a href="https://t.me/ayush3298/"
                    target="_blank" class="icon-link"><i class="fab fa-telegram-plane"></i> </a>
             </div>
-            <div style="margin-top: 1.5rem" class="hero-headline">
-                <button class="btn" href="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/resume/Ayush Bairagi Python.pdf">Download Resume</button>
+            <div style="margin-top: 1.5rem" class="hero-headline"><a href="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/resume/Ayush Bairagi Python.pdf">
+                <button class="btn">Download Resume</button></a>
+
             </div>
             <a class="arrow fa fa-arrow-down fa-3x" href="#about"></a>
         </div>
