Fix (Resume) : Changed Download Resume to Resume

--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
         <div class="nav-item"><a class="nav-item-link" href="#hero">Home</a></div>
         <div class="nav-item"><a class="nav-item-link" href="#about">About</a></div>
         <div class="nav-item"><a class="nav-item-link" href="#projects">Projects</a></div>
-        <div class="nav-item"><a class="nav-item-link"
-                                 href="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/resume/Ayush Bairagi Python.pdf">Resume</a>
-        </div>
     </div>
 </div>
 
@@ -88,7 +85,7 @@
                    target="_blank" class="icon-link"><i class="fab fa-telegram-plane"></i> </a>
             </div>
             <div style="margin-top: 1.5rem" class="hero-headline"><a href="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/resume/Ayush Bairagi Python.pdf">
-                <button class="btn">Download Resume</button></a>
+                <button class="btn">Resume</button></a>
 
             </div>
             <a class="arrow fa fa-arrow-down fa-3x" href="#about"></a>
