Content (Meta): added desc

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="author" content="Ayush Bairagi"/>
-    <meta name="description" content="Adam&#39;s Personal Website"/>
+    <meta name="description" content="Ayush Bairagi is Personal Website"/>
     <meta name="keywords" content="Ayush Bairagi, Ayush, Python Developer, software engineer"/>
 
     <meta itemprop="name" content="Ayush Bairagi"/>
     <meta itemprop="image"
           content="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/website.png"/>
-    <meta itemprop="description" content="Ayush&#39;s Personal Website"/>
+    <meta itemprop="description"
+          content="Ayush is a self-taught, full-stack Python developer with a “Can do” attitude. He has a passion for problem-solving, building things and making businesses succeed. He is madly curious by heart, so very hungry for knowledge and you will always find me trying and testing out new things to stay ahead of the game."/>
 
     <meta property="og:title" content="Ayush Bairagi"/>
     <meta property="og:url" content="https://ayushbairagi.com"/>
@@ -84,8 +85,10 @@
                 <a href="https://t.me/ayush3298/"
                    target="_blank" class="icon-link"><i class="fab fa-telegram-plane"></i> </a>
             </div>
-            <div style="margin-top: 1.5rem" class="hero-headline"><a href="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/resume/Ayush Bairagi Python.pdf">
-                <button class="btn">Resume</button></a>
+            <div style="margin-top: 1.5rem" class="hero-headline"><a
+                    href="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/resume/Ayush Bairagi Python.pdf">
+                <button class="btn">Resume</button>
+            </a>
 
             </div>
             <a class="arrow fa fa-arrow-down fa-3x" href="#about"></a>
