--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <link rel="stylesheet" href="style.css"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QD1Q83YPTY"></script>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -42,9 +45,34 @@
         gtag('js', new Date());
 
         gtag('config', 'G-QD1Q83YPTY');
+
     </script>
+    <script>
+
+</script>
+
 
 </head>
+<script>
+
+if(window.matchMedia('(max-width: 768px)').matches)
+{
+      $(function(){
+        $("#skill").hide();
+      })
+      }
+
+
+if(window.matchMedia('(min-width: 768px)').matches)
+{
+      $(function(){
+        $("#skill1").hide();
+      })
+      }
+
+
+</script>
+
 
 <body>
 <div class="navbar">
@@ -122,142 +150,199 @@
                         </div>
                     </div>
                     <div class="testimonials-card-wrapper">
-                        <div class="testimonials-card">
+                        <div class="testimonials-card" >
                         </div>
                     </div>
 
                     <div class="testimonials-card-wrapper">
-                        <div class="testimonials-card">
+                        <div class="testimonials-card" >
                         </div>
                     </div>
 
                     <div class="testimonials-card-wrapper">
-                        <div class="testimonials-card">
+                        <div class="testimonials-card" >
                         </div>
                     </div>
                 </div>
             </div>
 
         </div>
-        <!--        <div class="row">-->
-        <!--            <div class="col">-->
-        <!--                <button class="btn">More</button>-->
-        <!--            </div>-->
-    </div>
-    <div class="row">
-        <div class="col-9 about-experiencecol">
-            <div class="title">Experience</div>
-            <div class="about-timeline">
-
-                <div class="timeline-card timeline-card-blue">
-                    <div class="timeline-card-title">Tech Lead</div>
-                    <div class="timeline-card-subtitle">CubexO Software Solutions</div>
-                    <div class="timeline-card-content">&middot; Worked on end to end development; Right from
-                        requirement analysis to Documentation, designing workflows, Development, debugging,
-                        implementation to deployment and post-production issues.
-                    </div>
-                    <div class="timeline-card-content">&middot; Evaluated new tools, technologies and design patterns by
-                        creating POC’s to come up with trustable solutions for the clients which led to 60% more clients
-                        conversions.
-                    </div>
-                    <div class="timeline-card-content">&middot; Hands-on experience in troubleshooting and debugging
-                        issues under high load in the production environment.
-                    </div>
-                    <div class="timeline-card-content">&middot; Reviewed code written in multiple languages on GitHub,
-                        GitLab and BitBucket to catch critical issues and ensuring code quality and security measures
-                        before deployments.
-                    </div>
-                    <div class="timeline-card-content">&middot; Communicate and collaborate with multi-disciplinary
-                        teams of engineers, clients, and stakeholders daily.
-                    </div>
-                    <div class="timeline-card-content">&middot; Mentored and led the team to develop high quality,
-                        maintainable, robust, scalable and user-facing solutions with the highest code coverage and
-                        standardization.
-                    </div>
-                    <div class="timeline-card-content">&middot; Developed a centralized system to monitor health,
-                        logging and alerts about any breakdown for all the systems delivered and managed by the company,
-                        which led to more satisfied clients.
-                    </div>
-                    <div class="timeline-card-content">&middot; Developed reusable, modular, extendable and easily
-                        maintainable frameworks and libraries to be used by internal teams to deliver solutions faster
-                        without reinventing the wheel with Python and JavaScript for Django, FastAPI and ReactJS.
-                    </div>
-                    <div class="timeline-card-content">&middot; Migrated monolithic architecture to fault-tolerant
-                        microservice architecture using gRPC.
-                    </div>
-                    <div class="timeline-card-time">Oct 2018 - Present</div>
-                </div>
-
-                <div class="timeline-card timeline-card-blue">
-                    <div class="timeline-card-title">Freelance Software Engineer</div>
-                    <div class="timeline-card-subtitle"><a tabindex="_blank"
-                                                           href="https://www.fiverr.com/ayushbairagi32?up_rollout=true">Fiverr</a>
-                    </div>
-                    <div class="timeline-card-content">&middot; Worked with clients across the globe, belonging to
-                        different continents and domains and delivered 85+ projects on Fiverr with a 4.9 Star rating.
-                    </div>
-                    <div class="timeline-card-content">&middot; Communicated with clients to win their trust, understand
-                        their requirements and build solutions for them.
-                    </div>
-                    <div class="timeline-card-content">&middot; Reverse Engineered Instagram to create a bot for social
-                        media marketing and helped creators to reach their audience. The creators gained up to 10x more
-                        engagement within a span of a few months.
-
-                    </div>
-                    <div class="timeline-card-content">&middot; Used Beautifulsoup and requests library extensively to
-                        build databases of products from a wide array of websites.
-
-                    </div>
-
-                    <div class="timeline-card-time">Jan 2019 - Dec 2019</div>
-                </div>
-
-
+        <center/>
+        <div class="row">
+            <div class="col">
+                <button class="btn">More</button>
             </div>
+            </center>
         </div>
 
-        <div class="col-3 about-skillcol">
-            <div class="title"></div>
-            <div class="about-timeline">
-                <!--                    <div class="title">Skills</div>-->
-                <div class="skills-title">Languages</div>
-                <div class="skills-content">
-                    <div class="skills-tile">Python</div>
-                    <div class="skills-tile">JavaScript</div>
-                    <div class="skills-tile">TypeScript</div>
-                    <div class="skills-tile">SQL</div>
-                </div>
+<div class="row"><div class="col-3 about-skillcol" id="skill1">
+                <div class="title"></div>
+                <div class="about-timeline">
+                    <!--                    <div class="title">Skills</div>-->
+                    <div class="skills-title">Languages</div>
+                    <div class="skills-content">
+                        <div class="skills-tile">Python</div>
+                        <div class="skills-tile">JavaScript</div>
+                        <div class="skills-tile">TypeScript</div>
+                        <div class="skills-tile">SQL</div>
+                    </div>
 
-                <div class="skills-title">Technologies</div>
-                <div class="skills-content">
-                    <div class="skills-tile">Django</div>
-                    <div class="skills-tile">Django Rest Framework</div>
-                    <div class="skills-tile">Fast API</div>
-                    <div class="skills-tile">Elastic Search</div>
-                    <div class="skills-tile">Celery</div>
-                    <div class="skills-tile">GIT</div>
-                    <div class="skills-tile">Flask</div>
-                    <div class="skills-tile">AWS</div>
-                    <div class="skills-tile">GCP</div>
-                    <div class="skills-tile">CI/CD</div>
-                    <div class="skills-tile">Docker</div>
-                    <div class="skills-tile">Unit Testing</div>
-                    <div class="skills-tile">Jira</div>
-                    <div class="skills-tile">Kubernetes</div>
-                    <div class="skills-tile">Linux</div>
-                    <div class="skills-tile">Node.js</div>
-                </div>
-                <div class="skills-title">Design Patterns and Methodologies</div>
-                <div class="skills-content">
+                    <div class="skills-title">Technologies</div>
+                    <div class="skills-content">
+                        <div class="skills-tile">Django</div>
+                        <div class="skills-tile">Django Rest Framework</div>
+                        <div class="skills-tile">Fast API</div>
+                        <div class="skills-tile">Elastic Search</div>
+                        <div class="skills-tile">Celery</div>
+                        <div class="skills-tile">GIT</div>
+                        <div class="skills-tile">Flask</div>
+                        <div class="skills-tile">AWS</div>
+                        <div class="skills-tile">GCP</div>
+                        <div class="skills-tile">CI/CD</div>
+                        <div class="skills-tile">Docker</div>
+                        <div class="skills-tile">Unit Testing</div>
+                        <div class="skills-tile">Jira</div>
+                        <div class="skills-tile">Kubernetes</div>
+                        <div class="skills-tile">Linux</div>
+                        <div class="skills-tile">Node.js</div>
+                    </div>
+                    <div class="skills-title">Design Patterns and Methodologies</div>
+                    <div class="skills-content">
 
-                    <div class="skills-tile">TDD</div>
-                    <div class="skills-tile">SOLID</div>
-                    <div class="skills-tile">Microservice Architecture</div>
+                        <div class="skills-tile">TDD</div>
+                        <div class="skills-tile">SOLID</div>
+                        <div class="skills-tile">Microservice Architecture</div>
+                    </div>
+                </div>
+            </div></div>
+        <div class="row">
+
+
+            <div class="col-9 about-experiencecol" id="experience">
+
+                <div class="title">Experience</div>
+                <div class="about-timeline">
+                    <div class="timeline-card timeline-card-blue">
+                        <div class="timeline-card-title">Tech Lead</div>
+                        <div class="timeline-card-subtitle">CubexO Software Solutions</div>
+                        <div class="timeline-card-content">&middot; Worked on end to end development; Right from
+                            requirement analysis to Documentation, designing workflows, Development, debugging,
+                            implementation to deployment and post-production issues.
+                        </div>
+                        <div class="timeline-card-content">&middot; Evaluated new tools, technologies and design
+                            patterns by
+                            creating POC’s to come up with trustable solutions for the clients which led to 60% more
+                            clients
+                            conversions.
+                        </div>
+                        <div class="timeline-card-content">&middot; Hands-on experience in troubleshooting and debugging
+                            issues under high load in the production environment.
+                        </div>
+                        <div class="timeline-card-content">&middot; Reviewed code written in multiple languages on
+                            GitHub,
+                            GitLab and BitBucket to catch critical issues and ensuring code quality and security
+                            measures
+                            before deployments.
+                        </div>
+                        <div class="timeline-card-content">&middot; Communicate and collaborate with multi-disciplinary
+                            teams of engineers, clients, and stakeholders daily.
+                        </div>
+                        <div class="timeline-card-content">&middot; Mentored and led the team to develop high quality,
+                            maintainable, robust, scalable and user-facing solutions with the highest code coverage and
+                            standardization.
+                        </div>
+                        <div class="timeline-card-content">&middot; Developed a centralized system to monitor health,
+                            logging and alerts about any breakdown for all the systems delivered and managed by the
+                            company,
+                            which led to more satisfied clients.
+                        </div>
+                        <div class="timeline-card-content">&middot; Developed reusable, modular, extendable and easily
+                            maintainable frameworks and libraries to be used by internal teams to deliver solutions
+                            faster
+                            without reinventing the wheel with Python and JavaScript for Django, FastAPI and ReactJS.
+                        </div>
+                        <div class="timeline-card-content">&middot; Migrated monolithic architecture to fault-tolerant
+                            microservice architecture using gRPC.
+                        </div>
+                        <div class="timeline-card-time">Oct 2018 - Present</div>
+                    </div>
+
+                    <div class="timeline-card timeline-card-blue">
+                        <div class="timeline-card-title">Freelance Software Engineer</div>
+                        <div class="timeline-card-subtitle"><a tabindex="_blank"
+                                                               href="https://www.fiverr.com/ayushbairagi32?up_rollout=true">Fiverr</a>
+                        </div>
+                        <div class="timeline-card-content">&middot; Worked with clients across the globe, belonging to
+                            different continents and domains and delivered 85+ projects on Fiverr with a 4.9 Star
+                            rating.
+                        </div>
+                        <div class="timeline-card-content">&middot; Communicated with clients to win their trust,
+                            understand
+                            their requirements and build solutions for them.
+                        </div>
+                        <div class="timeline-card-content">&middot; Reverse Engineered Instagram to create a bot for
+                            social
+                            media marketing and helped creators to reach their audience. The creators gained up to 10x
+                            more
+                            engagement within a span of a few months.
+
+                        </div>
+                        <div class="timeline-card-content">&middot; Used Beautifulsoup and requests library extensively
+                            to
+                            build databases of products from a wide array of websites.
+
+                        </div>
+
+                        <div class="timeline-card-time">Jan 2019 - Dec 2019</div>
+                    </div>
+
+
                 </div>
             </div>
+            <div class="col-3 about-skillcol" id="skill">
+                <div class="title"></div>
+                <div class="about-timeline">
+                    <!--                    <div class="title">Skills</div>-->
+                    <div class="skills-title">Languages</div>
+                    <div class="skills-content">
+                        <div class="skills-tile">Python</div>
+                        <div class="skills-tile">JavaScript</div>
+                        <div class="skills-tile">TypeScript</div>
+                        <div class="skills-tile">SQL</div>
+                    </div>
+
+                    <div class="skills-title">Technologies</div>
+                    <div class="skills-content">
+                        <div class="skills-tile">Django</div>
+                        <div class="skills-tile">Django Rest Framework</div>
+                        <div class="skills-tile">Fast API</div>
+                        <div class="skills-tile">Elastic Search</div>
+                        <div class="skills-tile">Celery</div>
+                        <div class="skills-tile">GIT</div>
+                        <div class="skills-tile">Flask</div>
+                        <div class="skills-tile">AWS</div>
+                        <div class="skills-tile">GCP</div>
+                        <div class="skills-tile">CI/CD</div>
+                        <div class="skills-tile">Docker</div>
+                        <div class="skills-tile">Unit Testing</div>
+                        <div class="skills-tile">Jira</div>
+                        <div class="skills-tile">Kubernetes</div>
+                        <div class="skills-tile">Linux</div>
+                        <div class="skills-tile">Node.js</div>
+                    </div>
+                    <div class="skills-title">Design Patterns and Methodologies</div>
+                    <div class="skills-content">
+
+                        <div class="skills-tile">TDD</div>
+                        <div class="skills-tile">SOLID</div>
+                        <div class="skills-tile">Microservice Architecture</div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
-</div>
 </div>
 
 <div id="projects" class="project">
@@ -306,6 +391,9 @@
     </div>
 </div>
 <script type="text/javascript" src="script.js"></script>
+
 <!-- 8a%#J67% -->
 </body>
 </html>
+
+
