--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta itemprop="image"
           content="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/website.png"/>
     <meta itemprop="description"
-          content="Ayush is a self-taught, full-stack Python developer with a “Can do” attitude. He has a passion for problem-solving, building things and making businesses succeed. He is madly curious by heart, so very hungry for knowledge and you will always find me trying and testing out new things to stay ahead of the game."/>
+          content="Ayush is a community-taught, full-stack Python developer with a “Can do” attitude. He has a passion for problem-solving, building things and making businesses succeed. He is madly curious by heart, so very hungry for knowledge and you will always find me trying and testing out new things to stay ahead of the game."/>
 
     <meta property="og:title" content="Ayush Bairagi"/>
-    <meta property="og:url" content="https://ayushbairagi.com"/>
+    <meta property="og:url" content="https://ayushbairagi.dev"/>
     <meta property="og:image"
           content="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/website.png"/>
     <meta property="og:image:width" content="1200"/>
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="hero-text">As a <b>Software Crafter</b> and <b>Tech Lead</b>, I develop full-stack web applications
-            (mostly with Python, TypeScript, Node.js), operate them in production and help my team grow.
+             operate them in production and help my team grow.
         </div>
         <div class="hero-profile">
             <div class="hero-icons">
@@ -76,7 +76,7 @@
                 </a>
                 <a href="https://www.linkedin.com/in/ayush3298/" target="_blank" class="icon-link"><i
                         class="fab fa-linkedin"></i></a>
-                <a href="&#109;&#97;&#105;&#108;&#116;&#111;&colon;&#105;&#110;&#98;&#111;&#120;&commat;&#97;&#121;&#117;&#115;&#104;&#98;&#97;&#105;&#114;&#97;&#103;&#105;&period;&#99;&#111;&#109;"
+                <a href="&#109;&#97;&#105;&#108;&#116;&#111;&colon;&#109;&#101;&commat;&#97;&#121;&#117;&#115;&#104;&#98;&#97;&#105;&#114;&#97;&#103;&#105;&period;&#100;&#101;&#118;"
                    target="_blank" class="icon-link"><i
                         class="far fa-envelope"></i></a>
                 <a href="https://t.me/ayush3298/"
@@ -85,10 +85,10 @@
 
             </a>
 
-            </div>
-            <a class="arrow fa fa-arrow-down fa-3x" href="#about"></a>
         </div>
+        <a class="arrow fa fa-arrow-down fa-3x" href="#about"></a>
     </div>
+</div>
 
 </div>
 
@@ -145,48 +145,6 @@
             </center>
         </div>
 
-        <div class="row">
-            <div class="col-3 about-skillcol" id="skill1">
-                <div class="title"></div>
-                <div class="about-timeline">
-                    <!--                    <div class="title">Skills</div>-->
-                    <div class="skills-title">Languages</div>
-                    <div class="skills-content">
-                        <div class="skills-tile">Python</div>
-                        <div class="skills-tile">JavaScript</div>
-                        <div class="skills-tile">TypeScript</div>
-                        <div class="skills-tile">SQL</div>
-                    </div>
-
-                    <div class="skills-title">Technologies</div>
-                    <div class="skills-content">
-                        <div class="skills-tile">Django</div>
-                        <div class="skills-tile">Django Rest Framework</div>
-                        <div class="skills-tile">Fast API</div>
-                        <div class="skills-tile">Elastic Search</div>
-                        <div class="skills-tile">Celery</div>
-                        <div class="skills-tile">GIT</div>
-                        <div class="skills-tile">Flask</div>
-                        <div class="skills-tile">AWS</div>
-                        <div class="skills-tile">GCP</div>
-                        <div class="skills-tile">CI/CD</div>
-                        <div class="skills-tile">Docker</div>
-                        <div class="skills-tile">Unit Testing</div>
-                        <div class="skills-tile">Jira</div>
-                        <div class="skills-tile">Kubernetes</div>
-                        <div class="skills-tile">Linux</div>
-                        <div class="skills-tile">Node.js</div>
-                    </div>
-                    <div class="skills-title">Design Patterns and Methodologies</div>
-                    <div class="skills-content">
-
-                        <div class="skills-tile">TDD</div>
-                        <div class="skills-tile">SOLID</div>
-                        <div class="skills-tile">Microservice Architecture</div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="row">
 
 
@@ -282,7 +240,6 @@
             <div class="col-3 about-skillcol" id="skill">
                 <div class="title"></div>
                 <div class="about-timeline">
-                    <!--                    <div class="title">Skills</div>-->
                     <div class="skills-title">Languages</div>
                     <div class="skills-content">
                         <div class="skills-tile">Python</div>
@@ -298,7 +255,7 @@
                         <div class="skills-tile">Fast API</div>
                         <div class="skills-tile">Elastic Search</div>
                         <div class="skills-tile">Celery</div>
-                        <div class="skills-tile">GIT</div>
+                        <div class="skills-tile"></div>
                         <div class="skills-tile">Flask</div>
                         <div class="skills-tile">AWS</div>
                         <div class="skills-tile">GCP</div>
@@ -317,10 +274,24 @@
                         <div class="skills-tile">SOLID</div>
                         <div class="skills-tile">Microservice Architecture</div>
                     </div>
+                    <div class="skills-title">Databases</div>
+                    <div class="skills-content">
+                        <div class="skills-tile">Postgres</div>
+                        <div class="skills-tile">MongoDB</div>
+                        <div class="skills-tile">Cassandra</div>
+                        <div class="skills-tile">Clickhouse</div>
+                        <div class="skills-tile">Yugabyte</div>
+                    </div>
+                    <div class="skills-title">Other Tools</div>
+                    <div class="skills-content">
+                        <div class="skills-tile">Kafka</div>
+                        <div class="skills-tile">Prefect (Dask)</div>
+                        <div class="skills-tile">Airflow</div>
+                        <div class="skills-tile">Druid</div>
+                        <div class="skills-tile">GIT</div>
+                    </div>
                 </div>
             </div>
-
-
         </div>
     </div>
 </div>
