--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="timeline-card timeline-card-blue">
                         <div class="timeline-card-title">Research and Development Engineer</div>
                         <div class="timeline-card-subtitle">Deqode Labs</div>
-                        <div class="timeline-card-content">Crafting cool stuff
+                        <div class="timeline-card-content">Crafting cool stuff as scale
                         </div>
                         <div class="timeline-card-time">Dec 2021 - Present</div>
                     </div>
