--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="author" content="Ayush Bairagi"/>
-    <meta name="description" content="Ayush Bairagi is Personal Website"/>
+    <meta name="description" content="Ayush Bairagi's Personal Website"/>
     <meta name="keywords" content="Ayush Bairagi, Ayush, Python Developer, software engineer"/>
 
     <meta itemprop="name" content="Ayush Bairagi"/>
     <meta itemprop="image"
-          content="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/website.png"/>
+          content="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/website.webp"/>
     <meta itemprop="description"
           content="Ayush is a community-taught, full-stack Python developer with a “Can do” attitude. He has a passion for problem-solving, building things and making businesses succeed. He is madly curious by heart, so very hungry for knowledge and you will always find me trying and testing out new things to stay ahead of the game."/>
 
     <meta property="og:title" content="Ayush Bairagi"/>
     <meta property="og:url" content="https://ayushbairagi.dev"/>
     <meta property="og:image"
-          content="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/website.png"/>
+          content="https://raw.githubusercontent.com/ayush3298/portfolio-v2/master/assets/website.webp"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
     <meta property="og:image:type" content="image/png"/>
@@ -60,7 +60,7 @@
     <div class="hero-container">
         <div class="hero-profile">
 
-            <div class="hero-profile-img-wrapper"><img class="hero-profile-img" src="assets/profile.jpeg"/></div>
+            <div class="hero-profile-img-wrapper"><img class="hero-profile-img" src="assets/profile.webp"/></div>
 
             <div class="hero-profile-content">
                 <div class="hero-headline">Ayush Bairagi</div>
